Fix: URL wraps on mobile
Add `break-word` so the URL doesn't overflow.

- - - - - - - - - - - - - - - - - - - - -

Fix #286

--- a/src/hexo/themes/sonarwhal/source/core/css/scan-results.css
+++ b/src/hexo/themes/sonarwhal/source/core/css/scan-results.css
@@ -14,6 +14,7 @@
 .scan-overview__header {
     background-color: #e6e6e6;
     padding: 1rem 2rem;
+    word-wrap: break-word;
 }
 
 .scan-overview__header p:first-child {
